--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
   <div class="card">
-    <img src="./images/image-qr-code.png" width="285" height="285">
+    <img src="/image-qr-code.png" width="285" height="285">
 
   
 
