--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
   <link rel="stylesheet" type="text/css" href="style.css">
   
   <title>Frontend Mentor | QR code component</title>
@@ -17,7 +17,7 @@
 </head>
 <body>
   <div class="card">
-    <img src="/image-qr-code.png" width="285" height="285">
+    <img src="./image-qr-code.png" width="285" height="285">
 
   
 
