--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
 </head>
 <body>
   <div class="card">
-    <img src="./image-qr-code.png" width="285" height="285">
-
-  
+    <img src="image-qr-code.png" width="285" height="285">
 
   <h1>Improve your front-end skills by building projects</h1> 
 
